# CodingTest

./: .gitignore  CMakeLists.txt  CodingTest.kdev4  note.txt  std.cpp  test2.cpp
.kdev4/: CodingTest.kdev4
1/: .CMakeLists.txt.kate-swp  13.cpp  200.cpp  415.cpp  594.cpp  627.cpp  667.cpp  841.cpp  CMakeLists.txt
2/: .CMakeLists.txt.kate-swp  14.cpp  140-.cpp  140.cpp  141.cpp  159.cpp  160.cpp  183.cpp  235.cpp  254.cpp  28.cpp  38.cpp  414.cpp  428.cpp  437-.cpp  437.cpp  447.cpp  457.cpp  458.cpp  459.cpp  460.cpp  462-.cpp  462.cpp  585.cpp  586.cpp  600.cpp  61.cpp  617.cpp  62.cpp  63.cpp  74.cpp  75.cpp  CMakeLists.txt
3/: .CMakeLists.txt.kate-swp  102.cpp  103.cpp  143-.cpp  143.cpp  148.cpp  228.cpp  31.cpp  380.cpp  382.cpp  443.cpp  461.cpp  464-.cpp  464.cpp  464.py  5.cpp  521.cpp  533.cpp  539.cpp  56.cpp  57.cpp  58.cpp  587.cpp  59.cpp  604.cpp  607.cpp  608.cpp  609.cpp  610.cpp  625.py  894.cpp  CMakeLists.txt
4/: .CMakeLists.txt.kate-swp  120.cpp  127.cpp  137.cpp  178.cpp  242.cpp  431.cpp  433.cpp  434.cpp  531-.cpp  531.cpp  573.cpp  574.cpp  598.cpp  600.cpp  605.cpp  611.cpp  615.cpp  616.cpp  618.cpp  624.cpp  69.cpp  7.cpp  70.cpp  71.cpp  794.cpp  CMakeLists.txt
5/: .CMakeLists.txt.kate-swp  155.cpp  246.cpp  448.cpp  453.cpp  472.cpp  474.cpp  475.cpp  480.cpp  520.cpp  595.cpp  596.cpp  597.cpp  614.cpp  619.py  66.cpp  67.cpp  86.cpp  88.cpp  901.cpp  902.cpp  915.cpp  93.cpp  94.cpp  95.cpp  97.cpp  CMakeLists.txt
6/: .034.cpp.kate-swp  .CMakeLists.txt.kate-swp  010.cpp  010.py  015.cpp  016.cpp  017.cpp  018.cpp  033.cpp  034.cpp  051.cpp  052.cpp  107.cpp  108.cpp  121.cpp  121_.cpp  123.cpp  132.cpp  135.cpp  136.cpp  152.py  153.cpp  154.cpp  190.py  192.cpp  196.cpp  197.cpp  198.cpp  211.cpp  425.cpp  426.cpp  427.cpp  570.cpp  582.cpp  625.cpp  634.cpp  680.cpp  683.cpp  780.cpp  828.cpp  (+2 more)
7/: .042.cpp.kate-swp  .CMakeLists.txt.kate-swp  004.cpp  006.cpp  024.cpp  041.cpp  042.cpp  043.cpp  045.cpp  064.cpp  065.cpp  124.cpp  128.cpp  129.cpp  130.cpp  134.cpp  138.cpp  139.cpp  149.cpp  150.cpp  151.cpp  165.cpp  191.cpp  209.cpp  224.cpp  393.cpp  404.cpp  405.cpp  471.cpp  486.cpp  495.cpp  526.cpp  528.cpp  540.cpp  541.cpp  544.cpp  545.cpp  547.cpp  548.cpp  551.cpp  (+21 more)
8/: .272.cpp.kate-swp  076.cpp  109.cpp  110.cpp  114.cpp  115.cpp  116.cpp  117.cpp  254.cpp  (+8 more)
(+1 files in other folders)
