add_library( 
    test6 SHARED
    015.cpp
    016.cpp
    017.cpp
    018.cpp
    033.cpp
    034.cpp
#     051.cpp
#     052.cpp
#     107.cpp
#     108.cpp
#     121.cpp
#     123.cpp
#     132.cpp
#     135.cpp
#     136.cpp
#     152.cpp
#     153.cpp
#     154.cpp
#     190.cpp
#     192.cpp
#     196.cpp
#     197.cpp
#     198.cpp
#     211.cpp
#     425.cpp
#     426.cpp
#     427.cpp
#     570.cpp
#     582.cpp
#     634.cpp
#     680.cpp
#     683.cpp
#     780.cpp
#     828.cpp
#     829.cpp
)
