add_library( 
    test7 SHARED
    004.cpp
    024.cpp
    041.cpp
    042.cpp
    043.cpp
    045.cpp
    064.cpp
    065.cpp
    104.cpp
    124.cpp
    128.cpp
    129.cpp
    130.cpp
    134.cpp
    138.cpp
    139.cpp
    149.cpp
    150.cpp
    151.cpp
    165.cpp
    191.cpp
    209.cpp
    393.cpp
    405.cpp
    471.cpp
    486.cpp
    494.cpp
    495.cpp
    526.cpp
    528.cpp
    540.cpp
    541.cpp
    544.cpp
#     272.cpp
#     513.cpp
#     602.cpp
#     603.cpp
#     622.cpp
)

