add_library( 
    test7 SHARED
    004.cpp
    024.cpp
    041.cpp
    042.cpp
    043.cpp
    045.cpp
    064.cpp
    065.cpp
    104.cpp
    124.cpp
    128.cpp
    129.cpp
    130.cpp
    134.cpp
    138.cpp
    139.cpp
    149.cpp
    150.cpp
    151.cpp
    165.cpp
    191.cpp
    209.cpp
    393.cpp
    405.cpp
    471.cpp
    486.cpp
    494.cpp
    495.cpp
    526.cpp
    528.cpp
    540.cpp
    541.cpp
    544.cpp
    545.cpp
    548.cpp
    551.cpp
    575.cpp
    577.cpp
    601.cpp
    612.cpp
    617.cpp
    642.cpp
    654.cpp
    657.cpp
    
#     665.cpp
#     685.cpp
#     793.cpp
#     817.cpp
#     839.cpp
#     840.cpp
#     931.cpp
#     943.cpp
#     944.cpp
)
